--- a/.env
+++ b/.env
@@ -1,12 +1,11 @@
 # .env example for Railway
 
 DATABASE_URL="mysql://root:iyHmlSOlnPjrIZBJRyjrqwqSDAzmYUwX@shortline.proxy.rlwy.net:11783/railway"
-DB_HOST=shortline.proxy.rlwy.net
-DB_PORT=11783
-DB_USER=root
-DB_PASS=iyHmlSOlnPjrIZBJRyjrqwqSDAzmYUwX
-DB_NAME=railway
+#DB_HOST=shortline.proxy.rlwy.net
+#DB_PORT=11783
+#DB_USER=root
+#DB_PASS=iyHmlSOlnPjrIZBJRyjrqwqSDAzmYUwX
+#DB_NAME=railway
 SESSION_NAME=Veteran_session
 SESSION_LIFETIME=3600
-PORT=2500
 DEFAULT_POINTS_RATE=100
