--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # .env example for Railway
 
-DATABASE_URL="mysql://root:iyHmlSOlnPjrIZBJRyjrqwqSDAzmYUwX@shortline.proxy.rlwy.net:11783/railway"
+DATABASE_URL=mysql://root:iyHmlSOlnPjrIZBJRyjrqwqSDAzmYUwX@shortline.proxy.rlwy.net:11783/railway
 #DB_HOST=shortline.proxy.rlwy.net
 #DB_PORT=11783
 #DB_USER=root
