--- a/.env
+++ b/.env
@@ -1,6 +1,12 @@
 # .env example for Railway
 
-DATABASE_URL=mysql://root:iBZUffHKYCZPqSxQetwyxYVRPcErEzSa@switchback.proxy.rlwy.net:21050/railway
+DATABASE_URL="mysql://root:iyHmlSOlnPjrIZBJRyjrqwqSDAzmYUwX@shortline.proxy.rlwy.net:11783/railway"
+#DB_HOST=shortline.proxy.rlwy.net
+#DB_PORT=11783
+#DB_USER=root
+#DB_PASS=iyHmlSOlnPjrIZBJRyjrqwqSDAzmYUwX
+#DB_NAME=railway
 SESSION_NAME=Veteran_session
 SESSION_LIFETIME=3600
+
 DEFAULT_POINTS_RATE=100
