--- a/.env
+++ b/.env
@@ -8,5 +8,5 @@ DATABASE_URL="mysql://root:iyHmlSOlnPjrIZBJRyjrqwqSDAzmYUwX@shortline.proxy.rlwy
 #DB_NAME=railway
 SESSION_NAME=Veteran_session
 SESSION_LIFETIME=3600
-
+PORT=8000
 DEFAULT_POINTS_RATE=100
