--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
 # .env example for Railway
 
-DATABASE_URL="mysql://root:iyHmlSOlnPjrIZBJRyjrqwqSDAzmYUwX@shortline.proxy.rlwy.net:11783/railway"
-#DB_HOST=shortline.proxy.rlwy.net
-#DB_PORT=11783
-#DB_USER=root
-#DB_PASS=iyHmlSOlnPjrIZBJRyjrqwqSDAzmYUwX
-#DB_NAME=railway
+# DATABASE_URL="mysql://root:iBZUffHKYCZPqSxQetwyxYVRPcErEzSa@switchback.proxy.rlwy.net:21050/railway"
+DB_HOST=switchback.proxy.rlwy.net
+DB_PORT=21050
+DB_USER=root
+DB_PASS=iBZUffHKYCZPqSxQetwyxYVRPcErEzSa
+DB_NAME=railway
 SESSION_NAME=Veteran_session
 SESSION_LIFETIME=3600
 PORT=8000
