Update morning wed issue

--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
 # .env example for Railway
 
-# DATABASE_URL="mysql://root:iBZUffHKYCZPqSxQetwyxYVRPcErEzSa@switchback.proxy.rlwy.net:21050/railway"
-DB_HOST=switchback.proxy.rlwy.net
-DB_PORT=21050
+# DATABASE_URL=mysql://root:yOzPkDBhMebnptTOzmgCNmLYiqCZjhYd@ballast.proxy.rlwy.net:26612/railway
+DB_HOST=ballast.proxy.rlwy.net
+DB_PORT=26612
 DB_USER=root
-DB_PASS=iBZUffHKYCZPqSxQetwyxYVRPcErEzSa
+DB_PASS=yOzPkDBhMebnptTOzmgCNmLYiqCZjhYd
 DB_NAME=railway
 SESSION_NAME=Veteran_session
 SESSION_LIFETIME=3600
