--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,6 +1,5 @@
----
 deployment:
   tasks:
-    - echo "STARTING DEPLOYMENT"
-    - /bin/bash ./start.sh >> start.log 2>&1
-    - echo "DEPLOYMENT COMPLETE"
+    - echo "Starting app via start.sh"
+    - /bin/bash /home/pqqlulab/repositories/tvmrewardsclone/start.sh
+    - echo "Deployment done"
