--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -3,3 +3,4 @@ deployment:
     - echo "Starting app via start.sh"
     - /bin/bash /home/pqqlulab/repositories/tvmrewardsclone/start.sh
     - echo "Deployment done"
+# force redeploys
