--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -2,9 +2,17 @@
 deployment:
   tasks:
     - export DEPLOYPATH=/home/pqqlulab/public_html
+    - echo "Before cleaning public_html"
+    - ls -la $DEPLOYPATH
     - echo "Cleaning public_html (except .htaccess)"
     - find $DEPLOYPATH -mindepth 1 ! -name '.htaccess' -delete
+    - echo "After cleaning public_html"
+    - ls -la $DEPLOYPATH
     - echo "Copying app to public_html"
+    - ls -la
     - /bin/cp -R index.php start.php install.php 404.php router.php start.sh config src includes admin patient logs uploads vendor composer.json .htaccess $DEPLOYPATH
+    - echo "After copying"
+    - ls -la $DEPLOYPATH
     - echo "Starting app"
     - /bin/bash $DEPLOYPATH/start.sh
+    - echo "Deployment done"
