--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -10,9 +10,17 @@ deployment:
     - ls -la $DEPLOYPATH
     - echo "Copying app to public_html"
     - ls -la
-    - /bin/cp -R index.php start.php install.php 404.php router.php start.sh config src includes admin patient logs uploads vendor composer.json .htaccess $DEPLOYPATH
-    - echo "After copying"
-    - ls -la $DEPLOYPATH
-    - echo "Starting app"
-    - /bin/bash $DEPLOYPATH/start.sh
+    - /bin/cp -R index.php start.php install.php 404.php router.php start.sh config src includes admin patient .htaccess composer.json vendor README.md README_RAILWAY.md Readme $DEPLOYPATH
+    - find $DEPLOYPATH/logs -type f -delete
+    - rm -rf $DEPLOYPATH/vendor
+    - rm -rf $DEPLOYPATH/logs
+    - rm -rf $DEPLOYPATH/uploads
+    - rm -f $DEPLOYPATH/*.log
+    - rm -f $DEPLOYPATH/*.xlsx
+    - rm -f $DEPLOYPATH/config/database.sqlite
+    - rm -f $DEPLOYPATH/*.sqlite
+    - rm -f $DEPLOYPATH/.env*
+    - rm -f $DEPLOYPATH/.DS_Store
+    - rm -f $DEPLOYPATH/Thumbs.db
+    - rm -f $DEPLOYPATH/test_db.php
     - echo "Deployment done"
