--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,15 +1,20 @@
 ---
 deployment:
   tasks:
-    - export DEPLOYPATH=/home/pqqlulab/public_html
-    - export REPOPATH=/home/pqqlulab/repositories/tvmrewardsclone
-    - echo "Before cleaning public_html"
+    - export DEPLOYPATH=/home/yourusername/public_html
+
+    # Show current contents before cleaning
+    - echo "Before cleaning public_html:"
     - ls -la $DEPLOYPATH
-    - echo "Cleaning public_html (except .htaccess and wp-content)"
-    - find $DEPLOYPATH -mindepth 1 ! -name '.htaccess' ! -name 'wp-content' -delete
-    - echo "After cleaning public_html"
+
+    # Delete all EXCEPT .htaccess and index.php
+    - echo "Cleaning public_html except .htaccess and index.php"
+    - find $DEPLOYPATH -mindepth 1 ! -name '.htaccess' ! -name 'index.php' -exec rm -rf {} +
+
+    # Copy all repo files to public_html (excluding .git and .cpanel.yml)
+    - echo "Copying files to public_html..."
+    - rsync -av --exclude='.git' --exclude='.cpanel.yml' ./ $DEPLOYPATH/
+
+    # Show result
+    - echo "After deployment:"
     - ls -la $DEPLOYPATH
-    - echo "Copying app to public_html"
-    - ls -la $REPOPATH
-    - /bin/cp -R $REPOPATH/index.php $REPOPATH/404.php $REPOPATH/router.php $REPOPATH/install.php $REPOPATH/config $REPOPATH/src $REPOPATH/includes $REPOPATH/admin $REPOPATH/patient $REPOPATH/.htaccess $REPOPATH/composer.json $REPOPATH/README.md $REPOPATH/README_RAILWAY.md $REPOPATH/Readme $DEPLOYPATH
-    - echo "Deployment done"
